# numaflow

./: .codecov.yml  .dockerignore  .gitignore  .golangci.yml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  USERS.md  create-pipelines.sh  entrypoint.sh  go.mod  go.sum  index.html  mkdocs.yml  otel-config.yaml  pipeline.json  prometheus.yml  redis-deployment.yaml  reduce-bug-explanation.md  sitemap.xml  start.sh  temp_tests.rs  temp_try_from_impl.rs  test-daemon.sh  version-mapping.yaml  version.go  version_test.go
rust/: .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  install.sh  rust-toolchain.toml
rust/.cargo/: config.toml
rust/backoff/: Cargo.toml
rust/backoff/src/: lib.rs  retry.rs  strategy.rs
rust/extns/numaflow-http/: Cargo.toml
rust/extns/numaflow-jetstream/: Cargo.toml
rust/extns/numaflow-kafka/: Cargo.toml
rust/extns/numaflow-nats/: Cargo.toml
rust/extns/numaflow-pulsar/: Cargo.toml
rust/extns/numaflow-serving/: Cargo.toml
rust/extns/numaflow-sqs/: Cargo.toml
rust/mono-vertex/: Cargo.toml
rust/mono-vertex/src/: lib.rs
rust/monovertex/: Cargo.toml  build.rs
rust/monovertex/proto/: sink.proto  source.proto
rust/monovertex/src/: config.rs  forwarder.rs  lib.rs  message.rs  metrics.rs  server_info.rs  sink.rs  source.rs  startup.rs  transformer.rs
rust/numaflow/: Cargo.toml  build.rs
rust/numaflow-cli/: Cargo.toml  README.md
rust/numaflow-cli/examples/: sink-messages.yaml
rust/numaflow-cli/src/: cli.rs  exit.rs  input.rs  main.rs  message.rs  output.rs  ready.rs  transport.rs  windower.rs
rust/numaflow-cli/tests/: e2e.rs  reduce_e2e.rs
rust/numaflow-core/: Cargo.toml  build.rs
rust/numaflow-core/proto/: sourcetransform.proto
rust/numaflow-core/src/: config.rs  error.rs  forwarder.rs  lib.rs  mapper.rs  message.rs  metadata.rs  metrics.rs  monovertex.rs  pipeline.rs  reader.rs  reduce.rs  runtime.rs  serving_store.rs  servingstore.rs  shared.rs  sideinput.rs  sink.rs  sinker.rs  source.rs  startup.rs  tracker.rs  transformer.rs  typ.rs  watermark.rs
rust/numaflow-daemon/: Cargo.toml
rust/numaflow-daemon/src/: api.rs  connection_acceptor.rs  error.rs  grpc_adapter.rs  grpc_server.rs  http_server.rs  lib.rs  main.rs  service.rs  timeout_checker.rs  tls.rs
rust/numaflow-extns/pulsar/: Cargo.toml
rust/numaflow-grpc/: Cargo.toml  Makefile
rust/numaflow-grpc/src/: clients.rs  main.rs
rust/numaflow-models/: Cargo.toml  Makefile
rust/numaflow-models/hack/: swaggerfilter.py
rust/numaflow-models/src/: lib.rs
rust/numaflow-models/templates/: Cargo.mustache
rust/numaflow-monitor/: Cargo.toml
rust/numaflow-monitor/src/: app.rs  config.rs  error.rs  lib.rs  runtime.rs  runtime_errors.rs
rust/numaflow-mvtx-daemon/: Cargo.toml
rust/numaflow-mvtx-daemon/src/: lib.rs
rust/numaflow-pb/: Cargo.toml  Makefile  codegen.sh
rust/numaflow-pb/src/: clients.rs  common.rs  lib.rs  main.rs  objects.rs  servers.rs
rust/numaflow-shared/: Cargo.toml
rust/numaflow-shared/src/: error.rs  isb.rs  kv.rs  lib.rs  server_info.rs
rust/numaflow-sideinput/: Cargo.toml
rust/numaflow-sideinput/src/: config.rs  error.rs  lib.rs  manager.rs  synchronize.rs
rust/numaflow-testing/: Cargo.toml
rust/numaflow-testing/src/: lib.rs  simplebuffer.rs  simplekvstore.rs
rust/numaflow-throttling/: Cargo.toml  DESIGN.md
rust/numaflow-throttling/examples/: timeout_demo.rs
rust/numaflow-throttling/src/: error.rs  lib.rs  state.rs
rust/numaflow-udf-client/: Cargo.toml
rust/numaflow-udf-client/src/: error.rs  lib.rs
rust/numaflow-udf-client/tests/: batch_map.rs  reduce.rs  stream_map.rs  unary_map.rs
rust/numaflow/src/: cmdline.rs  main.rs  setup_tracing.rs
rust/servesink/: Cargo.toml  Dockerfile
rust/servesink/src/: lib.rs
rust/serving/: Cargo.toml  README.md
rust/serving/config/: default.toml  jetstream.conf
rust/serving/src/: app.rs  callback.rs  config.rs  consts.rs  error.rs  lib.rs  metrics.rs  pipeline.rs  source.rs
rust/source-sink/: Cargo.toml
rust/source-sink/src/: config.rs
serving/: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md
serving/backoff/: Cargo.toml
serving/backoff/src/: lib.rs  retry.rs
serving/config/: default.toml  pipeline_spec.json
serving/extras/upstreams/: Cargo.toml
serving/numaflow-models/: Cargo.toml  Makefile  README.md
serving/numaflow-models/docs/: AbstractSink.md  BasicAuth.md  BufferServiceConfig.md  CombinedEdge.md  Container.md  DaemonTemplate.md  Edge.md  FixedWindow.md  ForwardConditions.md  Function.md  GeneratorSource.md  GetContainerReq.md  GetRedisStatefulSetSpecReq.md  GroupBy.md  InterStepBufferService.md  InterStepBufferServiceSpec.md  InterStepBufferServiceStatus.md  JetStreamBufferService.md  JetStreamSource.md  KafkaSink.md  KafkaSource.md  NatsAuth.md  PbqStorage.md  PersistenceStrategy.md  Pipeline.md  PipelineLimits.md  PipelineList.md  PipelineStatus.md  RedisBufferService.md  RedisConfig.md  ServingSource.md  SideInput.md  SideInputsManagerTemplate.md  Sink.md  SlidingWindow.md  Source.md  Templates.md  Transformer.md  UdSink.md  UdSource.md  (+6 more)
serving/numaflow-models/templates/: Cargo.mustache  partial_header.mustache
serving/openapi/: Cargo.toml  Makefile  README.md
serving/openapi/.openapi-generator/: FILES
serving/openapi/docs/: AbstractPodTemplate.md  AbstractSink.md  AbstractVertex.md  Authorization.md  BasicAuth.md  Blackhole.md  BufferServiceConfig.md  CombinedEdge.md  Container.md  ContainerBuilder.md  ContainerTemplate.md  DaemonTemplate.md  Edge.md  FixedWindow.md  ForwardConditions.md  Function.md  GeneratorSource.md  GetContainerReq.md  GetDaemonDeploymentReq.md  GetJetStreamServiceSpecReq.md  GetJetStreamStatefulSetSpecReq.md  GetRedisServiceSpecReq.md  GetRedisStatefulSetSpecReq.md  GetSideInputDeploymentReq.md  GetVertexPodSpecReq.md  GroupBy.md  Gssapi.md  (+59 more)
serving/servesink/: Cargo.toml
serving/source-sink/: Cargo.toml  Dockerfile
serving/src/: app.rs  config.rs  error.rs  main.rs  metrics.rs  pipeline.rs
(+3389 files in other folders)
