[workspace]
resolver = "2"
members = [
    "backoff",
    "numaflow-models",
    "serving",
    "numaflow-core",
    "numaflow-pb",
    "extns/numaflow-pulsar",
    "extns/numaflow-sqs",
    "extns/numaflow-jetstream",
    "numaflow",
    "numaflow-monitor",
]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
enum_glob_use = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
todo = "deny"
# We should probably enable it in the future
# future_not_send = "deny"
empty_enum = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
inefficient_to_string = "warn"
match_on_vec_items = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
option_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
verbose_file_reads = "warn"

# This profile optimizes for runtime performance and small binary size at the expense of longer build times.
# Compared to default release profile, this profile reduced binary size from 29MB to 21MB
# and increased build time (with only one line change in code) from 12 seconds to 133 seconds (tested on Mac M2 Max).
[profile.release]
lto = "fat"
# Below settings optimizes for short build times at the expense of larger binary size and slower runtime performance
# If you have to rebuild image often, uncomment below options and comment out above 'lto' setting
# lto = "off"
# opt-level = 0
# incremental = true
# codegen-units = 256

[workspace.dependencies]
serving = { path = "serving" }
numaflow-core = { path = "numaflow-core" }
numaflow-models = { path = "numaflow-models" }
numaflow-monitor = { path = "numaflow-monitor" }
backoff = { path = "backoff" }
numaflow-pb = { path = "numaflow-pb" }
numaflow-pulsar = { path = "extns/numaflow-pulsar" }
numaflow-jetstream = { path = "extns/numaflow-jetstream" }
numaflow-sqs = { path = "extns/numaflow-sqs" }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
bytes = "1.9.0"
tracing = "0.1.41"
async-nats = "0.39.0"
thiserror = "2.0.3"
axum = { version = "0.8.3", default-features = false, features = [
    "http1",
    "http2",
    "json",
    "matched-path",
    "query",
    "tracing",
    "tokio",
] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tower = "0.5.2"
serde = { version = "1.0.217", features = ["derive"] }
rustls = { version = "0.23.21", features = ["aws_lc_rs"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "http2",
    "rustls-tls",
    "json",
] }
