[workspace]
resolver = "2"
members = [
    "backoff",
    "serving",
    "numaflow-core",
    "numaflow",
    "numaflow-monitor",
    "numaflow-sideinput",
    "numaflow-shared",
    "numaflow-throttling",
    # extensions
    "extns/numaflow-pulsar",
    "extns/numaflow-sqs",
    "extns/numaflow-nats",
    "extns/numaflow-kafka",
    "extns/numaflow-http",
    # generated
    "numaflow-pb",
    "numaflow-models",
]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
enum_glob_use = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
todo = "deny"
# We should probably enable it in the future
# future_not_send = "deny"
empty_enum = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
inefficient_to_string = "warn"
indexing_slicing = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
option_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
verbose_file_reads = "warn"

# This profile optimizes for runtime performance and small binary size at the expense of longer build times.
# Compared to default release profile, this profile reduced binary size from 29MB to 21MB
# and increased build time (with only one line change in code) from 12 seconds to 133 seconds (tested on Mac M2 Max).
[profile.release]
lto = "fat"

# This profile optimizes for short build times at the expense of larger binary size and slower runtime performance.
# If you have to rebuild image often, in Dockerfile you may replace `--release` passed to cargo command with `--profile quick-release`
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

[workspace.dependencies]
serving = { path = "serving" }
numaflow-core = { path = "numaflow-core" }
numaflow-models = { path = "numaflow-models" }
numaflow-monitor = { path = "numaflow-monitor" }
numaflow-sideinput = { path = "numaflow-sideinput" }
numaflow-shared = { path = "numaflow-shared" }
backoff = { path = "backoff" }
numaflow-pb = { path = "numaflow-pb" }
numaflow-pulsar = { path = "extns/numaflow-pulsar" }
numaflow-nats = { path = "extns/numaflow-nats" }
numaflow-kafka = { path = "extns/numaflow-kafka" }
numaflow-sqs = { path = "extns/numaflow-sqs" }
numaflow-http = { path = "extns/numaflow-http" }
numaflow-throttling = { path = "numaflow-throttling" }
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
bytes = "1.9.0"
tracing = "0.1.41"
async-nats = "0.44.2"
thiserror = "2.0.12"
axum = { version = "0.8.4", default-features = false, features = [
    "http1",
    "http2",
    "json",
    "matched-path",
    "query",
    "tracing",
    "tokio",
] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "http2",
    "rustls-tls",
    "json",
] }
uuid = "1.17.0"
futures = "0.3.31"
rcgen = "0.14.1"
chrono = "0.4.41"
serde_json = "1.0.140"
tonic = "0.14.2"
tonic-types = "0.14.2"
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
base64 = "0.22.1"
http = "1.3.1"
prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"
trait-variant = "0.1.2"
parking_lot = "0.12.4"
prometheus-client = "0.24.0"
pin-project = "1.1.5"
kube = "0.99.0"
rand = "0.9.2"
