workspace = { members = ["backoff", "extras/upstreams", "servesink"] }
[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[features]
redis-tests = []
nats-tests = []
all-tests = ["redis-tests", "nats-tests"]

[dependencies]
async-nats = "0.35.1"
axum = "0.7.5"
axum-macros = "0.4.1"
hyper-util = { version = "0.1.6", features = ["client-legacy"] }
metrics = { version = "0.23.0", default-features = false }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
tempfile = "3.10.1"
redis = { version = "0.25.3", features = ["tokio-comp", "aio", "connection-manager"] }
config = "0.14.0"
trait-variant = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
# intern
backoff = { path = "backoff" }
base64 = "0.22.1"
