[package]
name = "numaflow-core"
version = "0.1.0"
edition = "2024"

[features]
nats-tests = []
pulsar-tests = []
sqs-tests = []
kafka-tests = []
global-state-tests = []
all-tests = ["nats-tests", "pulsar-tests", "sqs-tests", "kafka-tests", "global-state-tests"]

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
numaflow-pulsar.workspace = true
numaflow-monitor.workspace = true
numaflow-nats.workspace = true
numaflow-kafka.workspace = true
numaflow-http.workspace = true
numaflow-sqs.workspace = true
numaflow-models.workspace = true
numaflow-pb.workspace = true
numaflow-shared.workspace = true
numaflow-throttling.workspace = true
serving.workspace = true
backoff.workspace = true

axum.workspace = true
axum-server.workspace = true
bytes.workspace = true
serde.workspace = true
rustls.workspace = true
tower.workspace = true
async-nats.workspace = true
futures.workspace = true
rcgen.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tonic.workspace = true
base64.workspace = true
prost.workspace = true
prost-types.workspace = true
trait-variant.workspace = true
parking_lot.workspace = true
prometheus-client.workspace = true
pin-project.workspace = true
kube.workspace = true
rand.workspace = true

hyper-util = "0.1.6"
flate2 = "1.1.2"
zstd = "0.13.3"
lz4 = "1.28.1"
async-trait = "0.1.88"

[dev-dependencies]
tempfile = "3.11.0"
# TODO: Remove this when OnSuccess sink support is added in numaflow-rs SDK
numaflow = { git = "https://github.com/numaproj/numaflow-rs.git", rev = "3ab1122c1f0053c75dbdbd8f60ca9816e6144ec3" }
pulsar = { version = "6.3.0", default-features = false, features = ["tokio-rustls-runtime"] }
hyper = "1.6.0"
hyper-rustls = "0.27.5"
http = "1.2.0"
aws-sdk-sqs = "1.65.0"
aws-smithy-mocks = "0.1.1"
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
numaflow-kafka = { workspace = true, features = ["kafka-tests-utils"] }
numaflow-pulsar = { workspace = true, features = ["pulsar-tests-utils"] }

[build-dependencies]
