[package]
name = "numaflow-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tonic.workspace = true
tokio.workspace = true
numaflow-pb.workspace = true
rcgen.workspace = true
time.workspace = true
rustls.workspace = true
http.workspace = true
bytes.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true

# Daemon-specific dependencies
http-body-util = "0.1.2"
hyper = "1.6.0"
hyper-util = "0.1.10"
tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "tls12"] }

[lints]
workspace = true
