[package]
name = "numaflow-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tonic.workspace = true
tokio.workspace = true
numaflow-pb.workspace = true
rcgen.workspace = true
time.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
tower.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
rustls-pemfile = "2.2"
bytes.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
hyper = "1.6.0"
http-body-util = "0.1"

[lints]
workspace = true
