[package]
name = "numaflow-models"
version = "0.0.0-pre"
authors = ["The Numaproj Authors"]
description = "Numaflow models"
license = "Apache-2.0 license"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.22.0", features = ["v1_29"] }
kube = "0.93.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }

[dependencies.reqwest]
default-features = false
version = "^0.11"
features = ["json", "multipart", "rustls-tls"]
