[package]
name = "numaflow-models"
version = "0.0.0-pre"
authors = ["The Numaproj Authors"]
description = "Numaflow models"
license = "Apache-2.0 license"
edition = "2024"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive = "^1.0"
url = "^2.2"
uuid = { workspace = true, features = ["serde", "v4"] }

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "rustls-tls"]
