[package]
name = "numaflow-monitor"
version = "0.1.0"
edition = "2024"


[lints]
workspace = true

[dependencies]
tonic = { version = "0.13.0" }
tokio.workspace = true
tracing.workspace = true
numaflow-models.workspace = true
axum.workspace = true
axum-server.workspace = true
serde.workspace = true
rcgen.workspace = true
chrono.workspace = true
thiserror = "2.0.3"
serde_json = "1.0.120"
http = "1.3.1"
tower.workspace = true
rustls.workspace = true

[dev-dependencies]
tempfile = "3.5"