[package]
name = "numaflow-monitor"
version = "0.1.0"
edition = "2024"


[lints]
workspace = true

[dependencies]
tonic.workspace = true
tokio.workspace = true
tracing.workspace = true
numaflow-models.workspace = true
axum.workspace = true
axum-server.workspace = true
serde.workspace = true
rcgen.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tower.workspace = true
rustls.workspace = true
http.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic-types.workspace = true

[dev-dependencies]
tempfile = "3.5"
