[[bin]]
name = "numaflow-pb"
path = "src/main.rs"

[package]
name = "numaflow-pb"
version = "0.1.0"
edition = "2024"

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost-build.workspace = true
tonic-prost-build.workspace = true

[lints]
workspace = true
