[package]
name = "numaflow-sideinput"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
async-nats.workspace = true
backoff.workspace = true
thiserror.workspace = true
chrono.workspace = true
bytes.workspace = true
tower.workspace = true
numaflow-pb.workspace = true
tonic = { version = "0.13.0" }
cron = "0.15.0"
chrono-tz = "0.10.3"
hyper-util = "0.1.14"

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true

[features]
nats-tests = []
all-tests = ["nats-tests"]
