[package]
name = "numaflow-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
bytes.workspace = true
chrono.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
async-trait = "0.1.88"
futures.workspace = true
numaflow-shared = { path = "../numaflow-shared" }

[lints]
workspace = true
