[package]
name = "numaflow-udf-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes.workspace = true
chrono.workspace = true
numaflow-pb.workspace = true
prost-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true

[dev-dependencies]
hyper-util = { version = "0.1", features = ["tokio"] }
numaflow.workspace = true
tempfile = "3"
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
