[package]
name = "numaflow"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
serving.workspace = true
numaflow-core.workspace = true
numaflow-models.workspace = true
numaflow-monitor.workspace = true
backoff.workspace = true
tokio.workspace = true
tracing.workspace = true
rustls.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }