[package]
name = "numaflow"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "entrypoint"
path = "src/bin/entrypoint.rs"

[lints]
workspace = true

[dependencies]
serving.workspace = true
numaflow-core.workspace = true
numaflow-monitor.workspace = true
numaflow-sideinput.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
rustls.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
clap = "4.5.40"

[build-dependencies]
chrono.workspace = true
