[package]
name = "servesink"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
tonic = "0.12.3"
numaflow = { git = "https://github.com/numaproj/numaflow-rs.git", rev = "ddd879588e11455921f1ca958ea2b3c076689293" }

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["rustls-tls"]
