[package]
name = "serving"
version = "0.1.0"
edition = "2024"

[features]
nats-tests = []
all-tests = ["nats-tests"]

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
numaflow-models.workspace = true
numaflow-pb.workspace = true
backoff.workspace = true
axum.workspace = true
axum-server.workspace = true
bytes.workspace = true
rustls.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
rcgen.workspace = true
async-nats.workspace = true
base64.workspace = true
tonic.workspace = true
http.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["std", "v7"] }
reqwest = { workspace = true, features = ["rustls-tls", "json", "stream"] }
tokio-stream.workspace = true
tokio-util.workspace = true
axum-macros = "0.5.0"
hyper-util = { version = "0.1.14", features = ["client-legacy"] }
tower-http = { version = "0.6.6", features = ["trace", "timeout"] }
trait-variant.workspace = true
parking_lot.workspace = true
prometheus-client.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true
numaflow = { git = "https://github.com/numaproj/numaflow-rs.git", rev = "9a12a1d832d4fece830452044bd7706dc8b2a381" }
tempfile = "3.20.0"
