[package]
name = "sourcer-sinker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tonic = "0.12.0"
bytes = "1.7.1"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tokio-util = "0.7.11"
tokio-stream = "0.1.15"
prost = "0.13.1"
prost-types = "0.13.1"
chrono = "0.4.31"
base64 = "0.22.1"
metrics = { version = "0.23.0", default-features = false }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
log = "0.4.22"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hyper-util = "0.1.6"
tower = "0.4.13"
uuid = { version = "1.10.0", features = ["v4"] }
once_cell = "1.19.0"
serde_json = "1.0.122"
numaflow-models = { path = "../numaflow-models"}
rcgen = "0.13.1"
rustls = { version = "0.23.12", features = ["aws_lc_rs"] }
serde = { version = "1.0.204", features = ["derive"] }
semver = "1.0"
pep440_rs = "0.6.6"
serial_test = "3.1.1"

[dev-dependencies]
tower = "0.4.13"
tempfile = "3.11.0"
numaflow = { git = "https://github.com/numaproj/numaflow-rs.git", branch="main" }

[build-dependencies]
tonic-build = "0.12.1"
