[package]
name = "numaflow-kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: fix when https://github.com/fede1024/rust-rdkafka/pull/756 is resolved
rdkafka = { git = "https://github.com/numaproj-labs/rust-rdkafka.git", rev = "b5c79588583b6ae5446d0d4ba99f7c6ee709420e", default-features = false, features = ["cmake-build", "tokio", "ssl-vendored", "gssapi-vendored", "sasl"] }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
uuid = { workspace = true, features = ["v4"], optional = true }

[features]
kafka-tests = ["uuid"]

[lints]
workspace = true
